--- a/index.html
+++ b/index.html
@@ -17,12 +17,32 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Bebas+Neue&family=Poppins:wght@300;400;500;600;800&family=Raleway:wght@500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
           rel="stylesheet">
+    <style>
+        section:first-child{
+            background-color: #bdc3c7;
+        }
+        [id="hed"]{
+            background-color: #81ecec;
+        }
+        [id="header"]{
+            background-color: #81ecec;
+        }
+        [id="skills"]{
+            background-color: #bdc3c7;
+        }
+        [id="about-me"]{
+            background-color: #bdc3c7;
+        }
+        [id="Gallery"]{
+            background-color: #bdc3c7;
+        }
+    </style>
 </head>
 <body>
-<header>
+<header id="header">
     <img src="assets/images/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="">
     <h1 id="lbl1">Portfolio</h1>
-    <nav class="headerNav">
+    <nav class="headerNav" id="hed">
         <ul>
             <a href="#home">
                 <li>Home</li>
@@ -52,7 +72,7 @@
     </nav>
 </header>
 <main>
-    <section class="sections" id="home">
+    <section class="sections" id="home" >
         <img id="img1" src="assets/images/7598163.jpg">
         <img id="img2" src="assets/images/Sajana.png">
         <h1 id="name">#Sajana Sulakshana Rodrigo</h1>
@@ -497,13 +517,10 @@
     <section class="sections" id="Gallery">
         <h1>Gallery</h1>
         <section>
-            <div>
-                <img src="assets/images/my/IMG_1701.JPG" alt="">
-            </div>
-            <div>
-                <img src="assets/images/my/_F8A5806.JPG" alt="" width="600px">
-            </div>
-            <div><img src="assets/images/my/IMG_20170111_092841.jpg" alt=""></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
 
         </section>
 
