--- a/assignments/CSS/Basics/case_2/index.html
+++ b/assignments/CSS/Basics/case_2/index.html
@@ -53,9 +53,9 @@
             font-family: 'Raleway', sans-serif;
             font-size: 19px;
             color: White;
-            width: 280px;
+            width: 256px;
             /*height: 100%;*/
-            background-color: #0B1B34;
+            background-color: #16a085;
             position: absolute;
             top: 0px;
             bottom: 0px;
@@ -173,9 +173,9 @@
     </section>
     <section>
         <section>
-            <div><img src="assets/2ba160192820f5455364dc7ab4a0a09a.webp" alt=""></div>
-            <div><img src="assets/9abfd2e03251c98cb5340a677ac219f1.webp" alt=""></div>
-            <div><img src="assets/c8215a54580b82fe03bb71c1a914158e.webp" alt=""></div>
+            <div><img src="../../../../assignments/CSS/Basics/case_2/assets/10-of-the-most-beautiful-places-to-visit-in-Laos.jpg" alt=""></div>
+            <div><img src="../../../../assignments/CSS/Basics/case_2/assets/5559852.jpg" alt=""></div>
+            <div><img src="../../../../assignments/CSS/Basics/case_2/assets/7598163.jpg" alt=""></div>
         </section>
 
 
@@ -279,9 +279,9 @@
             praesentium
             quaerat repellat sed!</p>
 
-        <h1>Derick</h1>
-        <h1>Andrew</h1>
-        <h1>Ferdinands</h1>
+        <h1>Sajana</h1>
+        <h1>Sulakshana</h1>
+        <h1>Rodrigo</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis fuga neque praesentium quaerat ratione.
             Aliquam debitis delectus, et harum impedit laudantium maxime minima, nisi omnis perspiciatis praesentium
@@ -293,7 +293,7 @@
 
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis fuga neque praesentium quaerat ratione.
-            Aliquam debitis Derick Derick Derick, et harum impedit laudantium maxime minima, nisi omnis perspiciatis
+            Aliquam debitis,et harum impedit laudantium maxime minima, nisi omnis perspiciatis
             praesentium
             quaerat repellat sed!</p>
 
@@ -308,18 +308,18 @@
 
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis fuga neque praesentium quaerat ratione.
-            Aliquam debitis Derick Derick Derick, et harum impedit laudantium maxime minima, nisi omnis perspiciatis
+            Aliquam, et harum impedit laudantium maxime minima, nisi omnis perspiciatis
             praesentium
             quaerat repellat sedeasfwefwe!</p>
 
-        <h1>Derick</h1>
-        <h1>Andrew</h1>
-        <h1>Ferdinands</h1>
+        <h1>Sajana</h1>
+        <h1>Sulakshana</h1>
+        <h1>Rodrigo</h1>
 
 
     </section>
     <footer>
-        <h3>Developed By IJSE @2022</h3>
+        <h3>Developed By IJSE @2023</h3>
     </footer>
 </main>
 
