--- a/assignments/CSS/Basics/case_2/responsive.html
+++ b/assignments/CSS/Basics/case_2/responsive.html
@@ -52,7 +52,7 @@
       top: 0;
       bottom: 0;
       width: 210px;
-      background-color: #000039;
+      background-color: #16a085;
     }
 
 
@@ -114,14 +114,14 @@
     }
 
     main > section > section:first-child > div:nth-child(1) {
-      background: url("assets/2ba160192820f5455364dc7ab4a0a09a.webp");
+      background: url("../../../../assignments/CSS/Basics/case_2/assets/10-of-the-most-beautiful-places-to-visit-in-Laos.jpg");
       background-size:cover;
       background-position:center;
       left: 0;
     }
 
     main > section > section:first-child > div:nth-child(2) {
-      background: url("assets/c8215a54580b82fe03bb71c1a914158e.webp");
+      background: url("../../../../assignments/CSS/Basics/case_2/assets/5559852.jpg");
       background-size:cover;
       background-position:center;
       left: calc(100%/3);
@@ -129,7 +129,7 @@
     }
 
     main > section > section:first-child > div:nth-child(3) {
-      background: url("assets/9abfd2e03251c98cb5340a677ac219f1.webp");
+      background: url("../../../../assignments/CSS/Basics/case_2/assets/7598163.jpg");
       background-size:cover;
       background-position:center;
       right: 0;
@@ -386,13 +386,13 @@
         earum fuga ipsa laboriosam magnam minus, non odit quod recusandae rem sed sint veritatis voluptatem voluptates voluptatibus.
 
       </p>
-      <h1>Derick Andrew Ferdinands</h1>
+      <h1>Sajana Sulakshana</h1>
     </section>
   </section>
 
 </main>
 <footer>
-  <b>Developed by ijse</b>
+  <b>Developed by ijse@2023</b>
 </footer>
 </body>
 </html>
