--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         [id="Gallery"]{
             background-color: #bdc3c7;
         }
+        [id="awee"]{
+            border:2px solid white;
+            position:absolute;
+            right: 50px;
+        }
+
     </style>
 </head>
 <body>
@@ -78,7 +84,7 @@
         <h1 id="name">#Sajana Sulakshana Rodrigo</h1>
         <aside>
             <h1 id="lbl2" >Hi...
-               I'm Sajana</h1>
+               I'm SaJaNa</h1>
         </aside>
         <aside id="hashtagAside">
             <ol class="hashtags">
@@ -122,11 +128,12 @@
     </section>
     <section class="sections" id="intro">
         <section>
-            <img id="intro-back" src="assets/images/f8eba5_460d0bdab99f487188a17916c22a9abe_mv2.webp" alt="">
-            <img id="intro-myPic" src="assets/images/sajaa.jpeg" alt="" width="700px" height="800px">
+           <!-- <img id="intro-back" src="assets/images/f8eba5_460d0bdab99f487188a17916c22a9abe_mv2.webp" alt="">-->
+            <img id="intro-back" src="assets/images/5559852.jpg" alt="">
+            <img id="intro-myPic" src="assets/images/sajaa.jpeg" alt="" width="700px" height="800px" >
         </section>
         <section id="intro-desc">
-            <h1>Let's Chat!!!</h1>
+            <h1>Let's See Who Am I...</h1>
             <p class="intro-paras">I am Sajana Sulakshana Rodrigo and I am currently an
                 Undergraduate Student at Institute Of Java & Software Engineering .</p>
             <p class="intro-paras">A proud Taxilian who started his education at Taxila Central College Horana
@@ -141,7 +148,7 @@
     </section>
     <section class="sections" id="skills">
         <h1 id="skills-Title">Languages, Skills & Tools</h1>
-        <img id="skills-back-img" src="assets/images/abstract-formed-by-color-dissolving-water.jpg" alt="">
+        <img id="skills-back-img" src="assets/images/" alt="">
         <section>
             <div>
                 <img class="tech-icons" src="assets/images/java_logo_640.webp" alt="">
@@ -149,6 +156,7 @@
                 <p class="tech-description">Java is a high-level, class-based, object-oriented programming
                     language that is designed to have as few implementation dependencies as possible....</p>
                 <span class="tech-learn_more">Learn More</span>
+
                 <img class="learn_more-img" src="assets/images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
                      alt="">
             </div>
@@ -367,7 +375,8 @@
         </aside>
     </section>
     <section class="sections" id="assignments">
-       <img id="Assignments-back-img" src="assets/images/ink-stain-purple-blue-tones.jpg" alt="">
+      <!-- <img id="Assignments-back-img" src="assets/images/ink-stain-purple-blue-tones.jpg" alt="">-->
+        <img id="Assignments-back-img" src="assets/images/flowers-yellow-flowers-black-background-digital-art-wallpaper-preview.jpg" alt="">
 
         <h1>Assign<span class="index-color">Ments</span></h1>
         <section id="as-view">
@@ -524,9 +533,10 @@
 
         </section>
 
+
     </section>
     <section class="sections" id="contact-me">
-        <h1>Take A Moment To, <span> Say Hi!</span></h1>
+        <h1>If You Have Tell Me Anything, <span> Plz Send Message...!</span></h1>
         <h1>Sajana Sulakshana Rodrigo</h1>
         <address>
             <h3>ADDRESS:</h3>
@@ -558,7 +568,7 @@
             <div></div>
             <div></div>
             <div></div>
-            <img src="assets/images/pollllllllll.png" alt="">
+            <img src="assets/images/awee.jpg" alt="" id="awee">
         </div>
 
         <div>
