--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Bebas+Neue&family=Poppins:wght@300;400;500;600;800&family=Raleway:wght@500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
           rel="stylesheet">
     <style>
-        section:first-child{
+        /*section:first-child{
             background-color: #bdc3c7;
         }
         [id="hed"]{
@@ -40,7 +40,7 @@
             border:2px solid white;
             position:absolute;
             right: 50px;
-        }
+        }*/
 
     </style>
 </head>
